[package]
name = "tool-call-budgets"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Per-tool call count caps for AI agents. Stops runaway tool loops before they hit the invoice."
keywords = ["llm", "agents", "ai", "budget", "tool"]
categories = ["asynchronous", "rust-patterns"]
repository = "https://github.com/MukundaKatta/tool-call-budgets-rs"
readme = "README.md"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
