[package]
name = "tool-call-budgets"
version = "0.1.0"
edition = "2021"
description = "Per-tool call-count caps for AI agent runs"
license = "MIT"
repository = "https://github.com/MukundaKatta/tool-call-budgets-rs"
keywords = ["agent", "tool", "budget", "cap", "llm"]
categories = ["api-bindings"]
exclude = ["target/*", ".github/*", "*.log"]

[dependencies]
serde_json = "1"
